second minor cosmetic change

--- a/get_game_data.ipynb
+++ b/get_game_data.ipynb
@@ -6,15 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cd Adjusting_Basketball_Stats"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "from modules.functions import get_schedule,ids,create_home_and_away_simple_dataframe,clean_dataframe,BadStatusCodeError\n",
@@ -24,12 +15,13 @@
     "import requests\n",
     "import time\n",
     "from tqdm import tqdm\n",
-    "ids = ids.loc[ids.link.notnull()].copy()"
+    "ids = ids.loc[ids.link.notnull()].copy()\n",
+    "%cd Adjusting_Basketball_Stats"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,17 +108,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5567\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "master_df.to_parquet('parquet_files/master_dataframe.gzip',compression='gzip')\n",
     "print(master_df.Game_ID.nunique())"
