minor change to add forfeits

--- a/get_game_data.ipynb
+++ b/get_game_data.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\fmath\\OneDrive\\Desktop\\Github\\Adjusting_Basketball_Stats\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
@@ -30,84 +22,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "master_df = pd.read_parquet('parquet_files/master_dataframe.gzip')\n",
-    "already_scraped_ids = set(master_df.Game_ID.unique().tolist())\n",
-    "not_yet_played_ids = set()"
+    "#already_scraped_ids = set(master_df.Game_ID.unique().tolist())\n",
+    "not_yet_played_ids = set()\n",
+    "with open('pickle_files/forfeitted_game_ids.pickle','rb') as f:\n",
+    "    forfeitted_game_ids = pickle.load(f)\n",
+    "already_scraped_ids = set()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 14%|█▎        | 49/357 [19:27<2:03:25, 24.04s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6113\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 25%|██▍       | 88/357 [35:17<1:48:40, 24.24s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6138\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 44%|████▍     | 157/357 [1:02:24<1:12:53, 21.87s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6163\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 62%|██████▏   | 223/357 [1:28:00<51:13, 22.94s/it]  "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6188\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 357/357 [2:18:53<00:00, 23.34s/it]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "counter = 0\n",
     "bad_requests_counter = 0\n",
@@ -123,7 +54,7 @@
     "\n",
     "        game_id = int(game_id)\n",
     "\n",
-    "        if (game_id in already_scraped_ids or game_id in not_yet_played_ids):\n",
+    "        if (game_id in already_scraped_ids or game_id in not_yet_played_ids or game_id in forfeitted_game_ids):\n",
     "            continue\n",
     "        \n",
     "        # Attempt to get data, unless it hasn't been played - Log it as such, and move on\n",
@@ -181,17 +112,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6206\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "master_df.to_parquet('parquet_files/master_dataframe.gzip',compression='gzip')\n",
     "print(master_df.Game_ID.nunique())\n",
@@ -217,7 +140,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
