--- a/sports_reference_get_data.ipynb
+++ b/sports_reference_get_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,18 +16,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "200\n",
-      "/cbb/schools/purdue/men/2023\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "all_schools_url = 'https://www.sports-reference.com/cbb/seasons/men/2023-school-stats.html'\n",
     "response = requests.get(all_schools_url, timeout = 10)\n",
@@ -51,17 +42,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  1%|          | 2/363 [00:13<41:49,  6.95s/it]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "master_df = pd.DataFrame()\n",
     "counter = 0\n",
@@ -78,381 +61,18 @@
     "    temp_df['team_name'] = team_name\n",
     "    master_df = pd.concat([master_df,temp_df])\n",
     "    counter +=1\n",
-    "    # if counter == stop_to_rest_point:\n",
-    "    #     time.sleep(np.random.randint(60,120))\n",
-    "    #     continue\n",
-    "    if counter == 3:\n",
-    "        break\n",
-    "    time.sleep(5)"
+    "    if counter == stop_to_rest_point:\n",
+    "        time.sleep(np.random.randint(60,120))\n",
+    "        continue\n",
+    "  \n",
+    "    time.sleep(np.random.rantint(3,7))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>G</th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Unnamed: 2_level_1</th>\n",
-       "      <th>Opp</th>\n",
-       "      <th>W/L</th>\n",
-       "      <th>Tm</th>\n",
-       "      <th>Opp</th>\n",
-       "      <th>FG</th>\n",
-       "      <th>FGA</th>\n",
-       "      <th>FG%</th>\n",
-       "      <th>...</th>\n",
-       "      <th>opp_FTA</th>\n",
-       "      <th>opp_FT%</th>\n",
-       "      <th>opp_ORB</th>\n",
-       "      <th>opp_TRB</th>\n",
-       "      <th>opp_AST</th>\n",
-       "      <th>opp_STL</th>\n",
-       "      <th>opp_BLK</th>\n",
-       "      <th>opp_TOV</th>\n",
-       "      <th>opp_PF</th>\n",
-       "      <th>team_name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2022-11-07</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Jackson State</td>\n",
-       "      <td>W</td>\n",
-       "      <td>65</td>\n",
-       "      <td>56</td>\n",
-       "      <td>23</td>\n",
-       "      <td>57</td>\n",
-       "      <td>.404</td>\n",
-       "      <td>...</td>\n",
-       "      <td>14</td>\n",
-       "      <td>.714</td>\n",
-       "      <td>7</td>\n",
-       "      <td>40</td>\n",
-       "      <td>9</td>\n",
-       "      <td>6</td>\n",
-       "      <td>1</td>\n",
-       "      <td>21</td>\n",
-       "      <td>21</td>\n",
-       "      <td>Abilene Christian</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2022-11-11</td>\n",
-       "      <td>@</td>\n",
-       "      <td>Texas A&amp;M</td>\n",
-       "      <td>L</td>\n",
-       "      <td>58</td>\n",
-       "      <td>77</td>\n",
-       "      <td>20</td>\n",
-       "      <td>52</td>\n",
-       "      <td>.385</td>\n",
-       "      <td>...</td>\n",
-       "      <td>35</td>\n",
-       "      <td>.714</td>\n",
-       "      <td>10</td>\n",
-       "      <td>33</td>\n",
-       "      <td>7</td>\n",
-       "      <td>11</td>\n",
-       "      <td>3</td>\n",
-       "      <td>19</td>\n",
-       "      <td>17</td>\n",
-       "      <td>Abilene Christian</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>2022-11-15</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>McMurry</td>\n",
-       "      <td>W</td>\n",
-       "      <td>104</td>\n",
-       "      <td>46</td>\n",
-       "      <td>41</td>\n",
-       "      <td>68</td>\n",
-       "      <td>.603</td>\n",
-       "      <td>...</td>\n",
-       "      <td>15</td>\n",
-       "      <td>.667</td>\n",
-       "      <td>4</td>\n",
-       "      <td>17</td>\n",
-       "      <td>7</td>\n",
-       "      <td>9</td>\n",
-       "      <td>2</td>\n",
-       "      <td>27</td>\n",
-       "      <td>18</td>\n",
-       "      <td>Abilene Christian</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>2022-11-21</td>\n",
-       "      <td>N</td>\n",
-       "      <td>Wright State</td>\n",
-       "      <td>L</td>\n",
-       "      <td>61</td>\n",
-       "      <td>77</td>\n",
-       "      <td>25</td>\n",
-       "      <td>58</td>\n",
-       "      <td>.431</td>\n",
-       "      <td>...</td>\n",
-       "      <td>19</td>\n",
-       "      <td>.632</td>\n",
-       "      <td>1</td>\n",
-       "      <td>24</td>\n",
-       "      <td>18</td>\n",
-       "      <td>12</td>\n",
-       "      <td>5</td>\n",
-       "      <td>18</td>\n",
-       "      <td>14</td>\n",
-       "      <td>Abilene Christian</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>2022-11-22</td>\n",
-       "      <td>N</td>\n",
-       "      <td>Weber State</td>\n",
-       "      <td>L</td>\n",
-       "      <td>67</td>\n",
-       "      <td>77</td>\n",
-       "      <td>26</td>\n",
-       "      <td>53</td>\n",
-       "      <td>.491</td>\n",
-       "      <td>...</td>\n",
-       "      <td>25</td>\n",
-       "      <td>.920</td>\n",
-       "      <td>8</td>\n",
-       "      <td>29</td>\n",
-       "      <td>10</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>18</td>\n",
-       "      <td>13</td>\n",
-       "      <td>Abilene Christian</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>29</td>\n",
-       "      <td>2023-02-25</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Western Michigan</td>\n",
-       "      <td>W</td>\n",
-       "      <td>81</td>\n",
-       "      <td>64</td>\n",
-       "      <td>29</td>\n",
-       "      <td>55</td>\n",
-       "      <td>.527</td>\n",
-       "      <td>...</td>\n",
-       "      <td>10</td>\n",
-       "      <td>.800</td>\n",
-       "      <td>6</td>\n",
-       "      <td>24</td>\n",
-       "      <td>7</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>12</td>\n",
-       "      <td>13</td>\n",
-       "      <td>Akron</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>30</td>\n",
-       "      <td>2023-02-28</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Ball State</td>\n",
-       "      <td>W</td>\n",
-       "      <td>87</td>\n",
-       "      <td>83</td>\n",
-       "      <td>26</td>\n",
-       "      <td>59</td>\n",
-       "      <td>.441</td>\n",
-       "      <td>...</td>\n",
-       "      <td>11</td>\n",
-       "      <td>.818</td>\n",
-       "      <td>6</td>\n",
-       "      <td>32</td>\n",
-       "      <td>15</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2</td>\n",
-       "      <td>9</td>\n",
-       "      <td>23</td>\n",
-       "      <td>Akron</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>31</td>\n",
-       "      <td>2023-03-03</td>\n",
-       "      <td>@</td>\n",
-       "      <td>Kent State</td>\n",
-       "      <td>L (1 OT)</td>\n",
-       "      <td>84</td>\n",
-       "      <td>89</td>\n",
-       "      <td>25</td>\n",
-       "      <td>57</td>\n",
-       "      <td>.439</td>\n",
-       "      <td>...</td>\n",
-       "      <td>25</td>\n",
-       "      <td>.880</td>\n",
-       "      <td>7</td>\n",
-       "      <td>33</td>\n",
-       "      <td>13</td>\n",
-       "      <td>7</td>\n",
-       "      <td>4</td>\n",
-       "      <td>13</td>\n",
-       "      <td>25</td>\n",
-       "      <td>Akron</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>32</td>\n",
-       "      <td>2023-03-09</td>\n",
-       "      <td>N</td>\n",
-       "      <td>Buffalo</td>\n",
-       "      <td>W</td>\n",
-       "      <td>101</td>\n",
-       "      <td>77</td>\n",
-       "      <td>36</td>\n",
-       "      <td>61</td>\n",
-       "      <td>.590</td>\n",
-       "      <td>...</td>\n",
-       "      <td>25</td>\n",
-       "      <td>.760</td>\n",
-       "      <td>12</td>\n",
-       "      <td>31</td>\n",
-       "      <td>5</td>\n",
-       "      <td>7</td>\n",
-       "      <td>1</td>\n",
-       "      <td>12</td>\n",
-       "      <td>21</td>\n",
-       "      <td>Akron</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>33</td>\n",
-       "      <td>2023-03-10</td>\n",
-       "      <td>N</td>\n",
-       "      <td>Kent State</td>\n",
-       "      <td>L</td>\n",
-       "      <td>73</td>\n",
-       "      <td>79</td>\n",
-       "      <td>25</td>\n",
-       "      <td>55</td>\n",
-       "      <td>.455</td>\n",
-       "      <td>...</td>\n",
-       "      <td>28</td>\n",
-       "      <td>.714</td>\n",
-       "      <td>13</td>\n",
-       "      <td>33</td>\n",
-       "      <td>8</td>\n",
-       "      <td>10</td>\n",
-       "      <td>2</td>\n",
-       "      <td>6</td>\n",
-       "      <td>18</td>\n",
-       "      <td>Akron</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>103 rows × 41 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     G        Date Unnamed: 2_level_1               Opp       W/L   Tm Opp  \\\n",
-       "0    1  2022-11-07                NaN     Jackson State         W   65  56   \n",
-       "1    2  2022-11-11                  @         Texas A&M         L   58  77   \n",
-       "2    3  2022-11-15                NaN           McMurry         W  104  46   \n",
-       "3    4  2022-11-21                  N      Wright State         L   61  77   \n",
-       "4    5  2022-11-22                  N       Weber State         L   67  77   \n",
-       "..  ..         ...                ...               ...       ...  ...  ..   \n",
-       "30  29  2023-02-25                NaN  Western Michigan         W   81  64   \n",
-       "31  30  2023-02-28                NaN        Ball State         W   87  83   \n",
-       "32  31  2023-03-03                  @        Kent State  L (1 OT)   84  89   \n",
-       "33  32  2023-03-09                  N           Buffalo         W  101  77   \n",
-       "34  33  2023-03-10                  N        Kent State         L   73  79   \n",
-       "\n",
-       "    FG FGA   FG%  ... opp_FTA opp_FT% opp_ORB opp_TRB opp_AST opp_STL opp_BLK  \\\n",
-       "0   23  57  .404  ...      14    .714       7      40       9       6       1   \n",
-       "1   20  52  .385  ...      35    .714      10      33       7      11       3   \n",
-       "2   41  68  .603  ...      15    .667       4      17       7       9       2   \n",
-       "3   25  58  .431  ...      19    .632       1      24      18      12       5   \n",
-       "4   26  53  .491  ...      25    .920       8      29      10       4       0   \n",
-       "..  ..  ..   ...  ...     ...     ...     ...     ...     ...     ...     ...   \n",
-       "30  29  55  .527  ...      10    .800       6      24       7       3       0   \n",
-       "31  26  59  .441  ...      11    .818       6      32      15       5       2   \n",
-       "32  25  57  .439  ...      25    .880       7      33      13       7       4   \n",
-       "33  36  61  .590  ...      25    .760      12      31       5       7       1   \n",
-       "34  25  55  .455  ...      28    .714      13      33       8      10       2   \n",
-       "\n",
-       "   opp_TOV opp_PF          team_name  \n",
-       "0       21     21  Abilene Christian  \n",
-       "1       19     17  Abilene Christian  \n",
-       "2       27     18  Abilene Christian  \n",
-       "3       18     14  Abilene Christian  \n",
-       "4       18     13  Abilene Christian  \n",
-       "..     ...    ...                ...  \n",
-       "30      12     13              Akron  \n",
-       "31       9     23              Akron  \n",
-       "32      13     25              Akron  \n",
-       "33      12     21              Akron  \n",
-       "34       6     18              Akron  \n",
-       "\n",
-       "[103 rows x 41 columns]"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "master_df"
    ]
