saved first parquet and updated process to include hard-coded column names

--- a/sports_reference_get_data.ipynb
+++ b/sports_reference_get_data.ipynb
@@ -11,7 +11,46 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from tqdm import tqdm\n",
-    "import time"
+    "import time\n",
+    "\n",
+    "master_column_names = ['date',\n",
+    "                    'opp_name',\n",
+    "                    'wl',\n",
+    "                    'score',\n",
+    "                    'opp_score',\n",
+    "                    'fg',\n",
+    "                    'fga',\n",
+    "                    'fgpct',\n",
+    "                    '3p',\n",
+    "                    '3pa',\n",
+    "                    '3ppct',\n",
+    "                    'ft',\n",
+    "                    'fta',\n",
+    "                    'ftpct',\n",
+    "                    'orb',\n",
+    "                    'trb',\n",
+    "                    'ast',\n",
+    "                    'stl',\n",
+    "                    'blk',\n",
+    "                    'tov',\n",
+    "                    'pf',\n",
+    "                    'opp_fg',\n",
+    "                    'opp_fga',\n",
+    "                    'opp_fgpct',\n",
+    "                    'opp_3p',\n",
+    "                    'opp_3pa',\n",
+    "                    'opp_3ppct',\n",
+    "                    'opp_ft',\n",
+    "                    'opp_fta',\n",
+    "                    'opp_ftpct',\n",
+    "                    'opp_orb',\n",
+    "                    'opp_trb',\n",
+    "                    'opp_ast',\n",
+    "                    'opp_stl',\n",
+    "                    'opp_blk',\n",
+    "                    'opp_tov',\n",
+    "                    'opp_pf',\n",
+    "                    'team_name']"
    ]
   },
   {
@@ -48,17 +87,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 13%|█▎        | 48/363 [04:47<30:55,  5.89s/it]"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Instantiate empty data frame\n",
     "master_df = pd.DataFrame()\n",
@@ -66,7 +97,7 @@
     "counter = 0\n",
     "# Create a random number between 100 and 300.  This is where the loop will pause\n",
     "# So as to not overload the site\n",
-    "stop_to_rest_point = np.random.randint(100,300)\n",
+    "stop_to_rest_point = np.random.randint(20,100)\n",
     "\n",
     "url_prefix = 'https://www.sports-reference.com'\n",
     "\n",
@@ -79,6 +110,7 @@
     "    temp_df.columns = [col2 if (col1.startswith('Unnamed') or col1 == \"School\") else f\"opp_{col2}\" for col1,col2 in temp_df.columns]\n",
     "    temp_df = temp_df.iloc[:,~temp_df.columns.str.startswith('Unnamed')].drop('G',axis = 1).dropna().query(\"Date != 'Date'\")\n",
     "    temp_df['team_name'] = team_name\n",
+    "    temp_df.columns = master_column_names\n",
     "    # Appending the cleaned dataframe back to the master data frame\n",
     "    master_df = pd.concat([master_df,temp_df])\n",
     "\n",
@@ -92,15 +124,8 @@
     "        continue\n",
     "    \n",
     "    # Sleep for 3 to 7 seconds\n",
-    "    time.sleep(np.random.randint(3,7))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    time.sleep(np.random.randint(3,7))\n",
+    "\n",
     "master_df.to_parquet('parquet_files/box_scores_sports_reference.gzip',compression='gzip')"
    ]
   }
