added save to pickle

--- a/sports_reference_get_data.ipynb
+++ b/sports_reference_get_data.ipynb
@@ -12,6 +12,7 @@
     "import numpy as np\n",
     "from tqdm import tqdm\n",
     "import time\n",
+    "import pickle\n",
     "\n",
     "master_column_names = ['date',\n",
     "                    'opp_name',\n",
@@ -50,7 +51,9 @@
     "                    'opp_blk',\n",
     "                    'opp_tov',\n",
     "                    'opp_pf',\n",
-    "                    'team_name']"
+    "                    'team_name']\n",
+    "\n",
+    "url_prefix = 'https://www.sports-reference.com'"
    ]
   },
   {
@@ -99,7 +102,6 @@
     "# So as to not overload the site\n",
     "stop_to_rest_point = np.random.randint(20,100)\n",
     "\n",
-    "url_prefix = 'https://www.sports-reference.com'\n",
     "\n",
     "# Iterate through the dictionary\n",
     "for team_name,url_suffix in tqdm(team_name_id_dict.items()):\n",
@@ -127,6 +129,74 @@
     "    time.sleep(np.random.randint(3,7))\n",
     "\n",
     "master_df.to_parquet('parquet_files/box_scores_sports_reference.gzip',compression='gzip')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Individual game box scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_game_uis = set()\n",
+    "team_game_id_dict = {team:set() for team in team_name_id_dict.keys()}\n",
+    "\n",
+    "counter = 0\n",
+    "stop_to_rest_point = np.random.randint(25,70)\n",
+    "\n",
+    "for team_name,team_url_section in tqdm(team_name_id_dict.items()):\n",
+    "\n",
+    "    url = f'{url_prefix}{team_url_section}{\"-gamelogs.html\"}'\n",
+    "    response = requests.get(url)\n",
+    "\n",
+    "    if response.status_code == 200:\n",
+    "        soup = BeautifulSoup(response.content)\n",
+    "        table = soup.findAll(\"tr\")\n",
+    "\n",
+    "        for row in table:\n",
+    "\n",
+    "            search = row.find('a',href = True)\n",
+    "            if search:\n",
+    "               \n",
+    "                game_ui = str(search).split('>')[0].replace('<a href=\"/cbb/boxscores/',\"\").replace('.html\"',\"\")\n",
+    "\n",
+    "                # Games that were forfeitted end with '2023', so we want to remove those\n",
+    "                if not game_ui.endswith('2023'):\n",
+    "\n",
+    "                    all_game_uis.add(game_ui)\n",
+    "                    team_game_id_dict[team_name].add(game_ui)\n",
+    "    else:\n",
+    "        raise Exception(f\"Status code was {response.status_code} for {url}\")\n",
+    "    \n",
+    "                \n",
+    "    counter +=1\n",
+    "    if counter == stop_to_rest_point:\n",
+    "\n",
+    "        time.sleep(np.random.randint(60,120))\n",
+    "        continue\n",
+    "    \n",
+    "    time.sleep(np.random.randint(2,7))\n",
+    "\n",
+    "# Save the dict as a pickle file\n",
+    "with open('pickle_files/sports_reference_cbb_teams_and_game_uis.pickle','wb') as f:\n",
+    "    pickle.dump(team_game_id_dict,f)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "game_ui_boxscore_dict = {game:{} for team,id_set in team_game_id_dict.items() for game in id_set}"
    ]
   }
  ],
