box score loop in place

--- a/sports_reference_get_data.ipynb
+++ b/sports_reference_get_data.ipynb
@@ -192,11 +192,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
-    "game_ui_boxscore_dict = {game:{} for team,id_set in team_game_id_dict.items() for game in id_set}"
+    "# Create the next dictionary\n",
+    "game_ui_boxscore_dict = {game:\n",
+    "                               {'first_team':'',\n",
+    "                                'second_team':'',\n",
+    "                                'raw_dataframes':[],\n",
+    "                                'clean_dataframes':{}} for team,id_set in team_game_id_dict.items() for game in id_set}\n",
+    "\n",
+    "counter = 0\n",
+    "stop_to_rest_point = np.random.randint(100,150)\n",
+    "\n",
+    "# Iterate through the game IDs\n",
+    "for game_id, sub_dict in tqdm(game_ui_boxscore_dict.items()):\n",
+    "\n",
+    "    url = f\"{url_prefix}/cbb/boxscores/{game_id}.html\"\n",
+    "    response = requests.get(url)\n",
+    "\n",
+    "    if response.status_code == 200:\n",
+    "\n",
+    "        soup = BeautifulSoup(response.content)\n",
+    "        first_team = str(soup.find('title')).split('vs.')[0].replace('<title>',\"\").strip()\n",
+    "        second_team = str(soup.find('title')).split(\"Box\")[0].split('vs.')[1].strip()\n",
+    "        assert first_team,second_team in team_game_id_dict\n",
+    "        sub_dict['first_team'] = first_team\n",
+    "        sub_dict['second_team'] = second_team\n",
+    "\n",
+    "        # The last four dataframes of the 20+ returned are what we want\n",
+    "        target_dfs = pd.read_html(response.text)[-4:]\n",
+    "        sub_dict['dataframes'].extend(target_dfs)\n",
+    "        \n",
+    "        counter += 1\n",
+    "        if counter == stop_to_rest_point:\n",
+    "            time.sleep(30,45)\n",
+    "            continue\n",
+    "\n",
+    "        time.sleep(np.random.randint(3,7))\n",
+    "\n",
+    "# Pickle it\n",
+    "with open('pickle_files/game_ids_with_boxscores.pickle','wb') as f:\n",
+    "    pickle.dump(game_ui_boxscore_dict,f)"
    ]
   }
  ],
