re-structure using never-nest principles

--- a/sports_reference_get_data.ipynb
+++ b/sports_reference_get_data.ipynb
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,25 +212,35 @@
     "    url = f\"{url_prefix}/cbb/boxscores/{game_id}.html\"\n",
     "    response = requests.get(url)\n",
     "\n",
-    "    if response.status_code == 200:\n",
+    "    # Stop if status code is bad\n",
+    "    if response.status_code != 200:\n",
+    "        raise Exception(f'Status code returned was {response.status_code} from URL {url}')\n",
+    "    \n",
+    "    # Skip if we've already gotten data for this game (list is not empty)\n",
+    "    if sub_dict['raw_dataframes']:\n",
+    "        continue\n",
     "\n",
-    "        soup = BeautifulSoup(response.content)\n",
-    "        first_team = str(soup.find('title')).split('vs.')[0].replace('<title>',\"\").strip()\n",
-    "        second_team = str(soup.find('title')).split(\"Box\")[0].split('vs.')[1].strip()\n",
-    "        assert first_team,second_team in team_game_id_dict\n",
-    "        sub_dict['first_team'] = first_team\n",
-    "        sub_dict['second_team'] = second_team\n",
+    "    soup = BeautifulSoup(response.content)\n",
+    "    first_team = str(soup.find('title')).split('vs.')[0].replace('<title>',\"\").strip()\n",
+    "    second_team = str(soup.find('title')).split(\"Box\")[0].split('vs.')[1].strip()\n",
+    "    assert first_team,second_team in team_game_id_dict\n",
+    "    sub_dict['first_team'] = first_team\n",
+    "    sub_dict['second_team'] = second_team\n",
     "\n",
-    "        # The last four dataframes of the 20+ returned are what we want\n",
-    "        target_dfs = pd.read_html(response.text)[-4:]\n",
-    "        sub_dict['dataframes'].extend(target_dfs)\n",
-    "        \n",
-    "        counter += 1\n",
-    "        if counter == stop_to_rest_point:\n",
-    "            time.sleep(30,45)\n",
-    "            continue\n",
+    "    # The last four dataframes of the 20+ returned are what we want\n",
+    "    target_dfs = pd.read_html(response.text)[-4:]\n",
+    "    sub_dict['raw_dataframes'].extend(target_dfs)\n",
+    "    \n",
+    "    counter += 1\n",
+    "    if counter < stop_to_rest_point:\n",
     "\n",
     "        time.sleep(np.random.randint(3,7))\n",
+    "        continue\n",
+    "\n",
+    "    time.sleep(30,45)\n",
+    "    # Pickle it ever so often just in case something happens\n",
+    "    with open('pickle_files/game_ids_with_boxscores.pickle','wb') as f:\n",
+    "        pickle.dump(game_ui_boxscore_dict,f)\n",
     "\n",
     "# Pickle it\n",
     "with open('pickle_files/game_ids_with_boxscores.pickle','wb') as f:\n",
