--- a/sports_reference_get_data.ipynb
+++ b/sports_reference_get_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,26 +156,28 @@
     "    url = f'{url_prefix}{team_url_section}{\"-gamelogs.html\"}'\n",
     "    response = requests.get(url)\n",
     "\n",
-    "    if response.status_code == 200:\n",
-    "        soup = BeautifulSoup(response.content)\n",
-    "        table = soup.findAll(\"tr\")\n",
-    "\n",
-    "        for row in table:\n",
-    "\n",
-    "            search = row.find('a',href = True)\n",
-    "            if search:\n",
-    "               \n",
-    "                game_ui = str(search).split('>')[0].replace('<a href=\"/cbb/boxscores/',\"\").replace('.html\"',\"\")\n",
-    "\n",
-    "                # Games that were forfeitted end with '2023', so we want to remove those\n",
-    "                if not game_ui.endswith('2023'):\n",
-    "\n",
-    "                    all_game_uis.add(game_ui)\n",
-    "                    team_game_id_dict[team_name].add(game_ui)\n",
-    "    else:\n",
+    "    if response.status_code != 200:\n",
     "        raise Exception(f\"Status code was {response.status_code} for {url}\")\n",
     "    \n",
-    "                \n",
+    "    soup = BeautifulSoup(response.content)\n",
+    "    table = soup.findAll(\"tr\")\n",
+    "\n",
+    "    for row in table:\n",
+    "\n",
+    "        search = row.find('a',href = True)\n",
+    "        \n",
+    "        if not search:\n",
+    "            continue\n",
+    "            \n",
+    "        game_ui = str(search).split('>')[0].replace('<a href=\"/cbb/boxscores/',\"\").replace('.html\"',\"\")\n",
+    "\n",
+    "        # Games that were forfeitted end with '2023', so we want to remove those\n",
+    "        if game_ui.endswith('2023'):\n",
+    "            continue\n",
+    "\n",
+    "        all_game_uis.add(game_ui)\n",
+    "        team_game_id_dict[team_name].add(game_ui)\n",
+    " \n",
     "    counter +=1\n",
     "    if counter == stop_to_rest_point:\n",
     "\n",
@@ -192,22 +194,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 84%|████████▍ | 5215/6222 [3:11:07<36:54,  2.20s/it]  \n"
+     ]
+    },
+    {
+     "ename": "Exception",
+     "evalue": "Status code returned was 404 from URL https://www.sports-reference.com/cbb/boxscores/2022-11-29-20-oral-roberts.html",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mException\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\FrankMathews\\Desktop\\Things\\Repos\\Adjusting_Basketball_Stats\\sports_reference_get_data.ipynb Cell 6\u001b[0m in \u001b[0;36m<cell line: 8>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/FrankMathews/Desktop/Things/Repos/Adjusting_Basketball_Stats/sports_reference_get_data.ipynb#W5sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m \u001b[39m# Stop if status code is bad\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/FrankMathews/Desktop/Things/Repos/Adjusting_Basketball_Stats/sports_reference_get_data.ipynb#W5sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m \u001b[39mif\u001b[39;00m response\u001b[39m.\u001b[39mstatus_code \u001b[39m!=\u001b[39m \u001b[39m200\u001b[39m:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/FrankMathews/Desktop/Things/Repos/Adjusting_Basketball_Stats/sports_reference_get_data.ipynb#W5sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mException\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mStatus code returned was \u001b[39m\u001b[39m{\u001b[39;00mresponse\u001b[39m.\u001b[39mstatus_code\u001b[39m}\u001b[39;00m\u001b[39m from URL \u001b[39m\u001b[39m{\u001b[39;00murl\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/FrankMathews/Desktop/Things/Repos/Adjusting_Basketball_Stats/sports_reference_get_data.ipynb#W5sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m soup \u001b[39m=\u001b[39m BeautifulSoup(response\u001b[39m.\u001b[39mcontent)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/FrankMathews/Desktop/Things/Repos/Adjusting_Basketball_Stats/sports_reference_get_data.ipynb#W5sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m first_team \u001b[39m=\u001b[39m \u001b[39mstr\u001b[39m(soup\u001b[39m.\u001b[39mfind(\u001b[39m'\u001b[39m\u001b[39mtitle\u001b[39m\u001b[39m'\u001b[39m))\u001b[39m.\u001b[39msplit(\u001b[39m'\u001b[39m\u001b[39mvs.\u001b[39m\u001b[39m'\u001b[39m)[\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39mreplace(\u001b[39m'\u001b[39m\u001b[39m<title>\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m)\u001b[39m.\u001b[39mstrip()\n",
+      "\u001b[1;31mException\u001b[0m: Status code returned was 404 from URL https://www.sports-reference.com/cbb/boxscores/2022-11-29-20-oral-roberts.html"
+     ]
+    }
+   ],
    "source": [
-    "# Create the next dictionary\n",
-    "game_ui_boxscore_dict = {game:\n",
-    "                               {'first_team':'',\n",
-    "                                'second_team':'',\n",
-    "                                'raw_dataframes':[],\n",
-    "                                'clean_dataframes':{}} for team,id_set in team_game_id_dict.items() for game in id_set}\n",
+    "with open('pickle_files/game_ids_with_boxscores.pickle','rb') as f:\n",
+    "        game_ui_boxscore_dict = pickle.load(f)\n",
     "\n",
     "counter = 0\n",
-    "stop_to_rest_point = np.random.randint(100,150)\n",
+    "save_point = 100\n",
     "\n",
     "# Iterate through the game IDs\n",
     "for game_id, sub_dict in tqdm(game_ui_boxscore_dict.items()):\n",
+    "\n",
+    "    # Skip if we've already gotten data for this game (list is not empty)\n",
+    "    if sub_dict['raw_dataframes']:\n",
+    "        continue\n",
     "\n",
     "    url = f\"{url_prefix}/cbb/boxscores/{game_id}.html\"\n",
     "    response = requests.get(url)\n",
@@ -216,9 +237,6 @@
     "    if response.status_code != 200:\n",
     "        raise Exception(f'Status code returned was {response.status_code} from URL {url}')\n",
     "    \n",
-    "    # Skip if we've already gotten data for this game (list is not empty)\n",
-    "    if sub_dict['raw_dataframes']:\n",
-    "        continue\n",
     "\n",
     "    soup = BeautifulSoup(response.content)\n",
     "    first_team = str(soup.find('title')).split('vs.')[0].replace('<title>',\"\").strip()\n",
@@ -232,17 +250,27 @@
     "    sub_dict['raw_dataframes'].extend(target_dfs)\n",
     "    \n",
     "    counter += 1\n",
-    "    if counter < stop_to_rest_point:\n",
+    "    if counter < save_point:\n",
     "\n",
-    "        time.sleep(np.random.randint(3,7))\n",
+    "        time.sleep(np.random.randint(3,5))\n",
+    "        # Pickle it ever so often just in case something happens\n",
+    "        with open('pickle_files/game_ids_with_boxscores.pickle','wb') as f:\n",
+    "            pickle.dump(game_ui_boxscore_dict,f)\n",
     "        continue\n",
     "\n",
-    "    time.sleep(30,45)\n",
-    "    # Pickle it ever so often just in case something happens\n",
-    "    with open('pickle_files/game_ids_with_boxscores.pickle','wb') as f:\n",
-    "        pickle.dump(game_ui_boxscore_dict,f)\n",
+    "    time.sleep(np.random.randint(3,5))\n",
     "\n",
     "# Pickle it\n",
+    "with open('pickle_files/game_ids_with_boxscores.pickle','wb') as f:\n",
+    "    pickle.dump(game_ui_boxscore_dict,f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "with open('pickle_files/game_ids_with_boxscores.pickle','wb') as f:\n",
     "    pickle.dump(game_ui_boxscore_dict,f)"
    ]
