--- a/sports_reference_get_data.ipynb
+++ b/sports_reference_get_data.ipynb
@@ -194,25 +194,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 84%|████████▍ | 5215/6222 [3:11:07<36:54,  2.20s/it]  \n"
-     ]
-    },
-    {
-     "ename": "Exception",
-     "evalue": "Status code returned was 404 from URL https://www.sports-reference.com/cbb/boxscores/2022-11-29-20-oral-roberts.html",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\FrankMathews\\Desktop\\Things\\Repos\\Adjusting_Basketball_Stats\\sports_reference_get_data.ipynb Cell 6\u001b[0m in \u001b[0;36m<cell line: 8>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/FrankMathews/Desktop/Things/Repos/Adjusting_Basketball_Stats/sports_reference_get_data.ipynb#W5sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m \u001b[39m# Stop if status code is bad\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/FrankMathews/Desktop/Things/Repos/Adjusting_Basketball_Stats/sports_reference_get_data.ipynb#W5sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m \u001b[39mif\u001b[39;00m response\u001b[39m.\u001b[39mstatus_code \u001b[39m!=\u001b[39m \u001b[39m200\u001b[39m:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/FrankMathews/Desktop/Things/Repos/Adjusting_Basketball_Stats/sports_reference_get_data.ipynb#W5sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mException\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mStatus code returned was \u001b[39m\u001b[39m{\u001b[39;00mresponse\u001b[39m.\u001b[39mstatus_code\u001b[39m}\u001b[39;00m\u001b[39m from URL \u001b[39m\u001b[39m{\u001b[39;00murl\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/FrankMathews/Desktop/Things/Repos/Adjusting_Basketball_Stats/sports_reference_get_data.ipynb#W5sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m soup \u001b[39m=\u001b[39m BeautifulSoup(response\u001b[39m.\u001b[39mcontent)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/FrankMathews/Desktop/Things/Repos/Adjusting_Basketball_Stats/sports_reference_get_data.ipynb#W5sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m first_team \u001b[39m=\u001b[39m \u001b[39mstr\u001b[39m(soup\u001b[39m.\u001b[39mfind(\u001b[39m'\u001b[39m\u001b[39mtitle\u001b[39m\u001b[39m'\u001b[39m))\u001b[39m.\u001b[39msplit(\u001b[39m'\u001b[39m\u001b[39mvs.\u001b[39m\u001b[39m'\u001b[39m)[\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39mreplace(\u001b[39m'\u001b[39m\u001b[39m<title>\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m)\u001b[39m.\u001b[39mstrip()\n",
-      "\u001b[1;31mException\u001b[0m: Status code returned was 404 from URL https://www.sports-reference.com/cbb/boxscores/2022-11-29-20-oral-roberts.html"
+      "100%|██████████| 6222/6222 [1:18:15<00:00,  1.33it/s]\n"
      ]
     }
    ],
@@ -225,6 +214,10 @@
     "\n",
     "# Iterate through the game IDs\n",
     "for game_id, sub_dict in tqdm(game_ui_boxscore_dict.items()):\n",
+    "\n",
+    "    # Confirmed bad ID\n",
+    "    if game_id == \"2022-11-29-20-oral-roberts\":\n",
+    "         continue\n",
     "\n",
     "    # Skip if we've already gotten data for this game (list is not empty)\n",
     "    if sub_dict['raw_dataframes']:\n",
@@ -261,16 +254,6 @@
     "    time.sleep(np.random.randint(3,5))\n",
     "\n",
     "# Pickle it\n",
-    "with open('pickle_files/game_ids_with_boxscores.pickle','wb') as f:\n",
-    "    pickle.dump(game_ui_boxscore_dict,f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "with open('pickle_files/game_ids_with_boxscores.pickle','wb') as f:\n",
     "    pickle.dump(game_ui_boxscore_dict,f)"
    ]
