--- a/deprecated/get_game_data.ipynb
+++ b/deprecated/get_game_data.ipynb
@@ -8,11 +8,9 @@
    "source": [
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
-    "from modules.functions import get_schedule,ids,create_home_and_away_simple_dataframe,clean_dataframe,BadStatusCodeError\n",
+    "from modules.functions import get_schedule,ids,create_home_and_away_simple_dataframe,BadStatusCodeError\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from bs4 import BeautifulSoup\n",
-    "import requests\n",
     "import time\n",
     "from tqdm import tqdm\n",
     "import pickle\n",
@@ -30,7 +28,7 @@
     "#already_scraped_ids = set(master_df.Game_ID.unique().tolist())\n",
     "not_yet_played_ids = set()\n",
     "with open('pickle_files/forfeitted_game_ids.pickle','rb') as f:\n",
-    "    forfeitted_game_ids = pickle.load(f)\n",
+    "    forfeited_game_ids = pickle.load(f)\n",
     "already_scraped_ids = set()"
    ]
   },
@@ -54,7 +52,7 @@
     "\n",
     "        game_id = int(game_id)\n",
     "\n",
-    "        if (game_id in already_scraped_ids or game_id in not_yet_played_ids or game_id in forfeitted_game_ids):\n",
+    "        if game_id in already_scraped_ids or game_id in not_yet_played_ids or game_id in forfeited_game_ids:\n",
     "            continue\n",
     "        \n",
     "        # Attempt to get data, unless it hasn't been played - Log it as such, and move on\n",
