Minor functionality tweaks/commenting

--- a/sports_reference_get_data.ipynb
+++ b/sports_reference_get_data.ipynb
@@ -2,8 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-17T02:35:45.674178200Z",
+     "start_time": "2023-10-17T02:35:45.654989200Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from bs4 import BeautifulSoup\n",
@@ -13,6 +18,8 @@
     "from tqdm import tqdm\n",
     "import time\n",
     "import pickle\n",
+    "\n",
+    "SEASON = 2023\n",
     "\n",
     "master_column_names = ['date',\n",
     "                    'opp_name',\n",
@@ -57,16 +64,38 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "markdown",
    "source": [
-    "# Insantiate an empty dictionary\n",
+    "Get each school's unique URL suffix"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-17T02:35:47.176344200Z",
+     "start_time": "2023-10-17T02:35:45.665095100Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/cbb/schools/purdue/men/2023\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Instantiate an empty dictionary\n",
     "team_name_id_dict = {}\n",
     "\n",
     "# URL for data from all schools\n",
-    "all_schools_url = 'https://www.sports-reference.com/cbb/seasons/men/2023-school-stats.html'\n",
+    "all_schools_url = f'https://www.sports-reference.com/cbb/seasons/men/{SEASON}-school-stats.html'\n",
     "response = requests.get(all_schools_url, timeout = 10)\n",
     "soup = BeautifulSoup(response.content)\n",
     "# Find table ('tr')\n",
@@ -90,16 +119,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-17T03:10:25.452085500Z",
+     "start_time": "2023-10-17T02:35:47.179109700Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 363/363 [34:37<00:00,  5.72s/it] \n"
+     ]
+    }
+   ],
    "source": [
     "# Instantiate empty data frame\n",
     "master_df = pd.DataFrame()\n",
     "# Create an iteration counter\n",
     "counter = 0\n",
     "# Create a random number between 100 and 300.  This is where the loop will pause\n",
-    "# So as to not overload the site\n",
+    "# To not overload the site\n",
     "stop_to_rest_point = np.random.randint(20,100)\n",
     "\n",
     "\n",
@@ -122,13 +164,13 @@
     "    if counter == stop_to_rest_point:\n",
     "\n",
     "        time.sleep(np.random.randint(60,120))\n",
-    "        master_df.to_parquet('parquet_files/box_scores_sports_reference.gzip',compression='gzip')\n",
+    "        master_df.to_parquet(f'parquet_files/box_scores_sports_reference_{SEASON}.gzip',compression='gzip')\n",
     "        continue\n",
     "    \n",
     "    # Sleep for 3 to 7 seconds\n",
     "    time.sleep(np.random.randint(3,7))\n",
     "\n",
-    "master_df.to_parquet('parquet_files/box_scores_sports_reference.gzip',compression='gzip')"
+    "master_df.to_parquet(f'parquet_files/box_scores_sports_reference_{SEASON}.gzip',compression='gzip')"
    ]
   },
   {
@@ -136,18 +178,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Individual game box scores"
+    "Individual game player box scores"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-17T03:39:38.459660100Z",
+     "start_time": "2023-10-17T03:10:25.013181100Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 363/363 [29:13<00:00,  4.83s/it] \n"
+     ]
+    }
+   ],
    "source": [
+    "# Instantiate an empty set to hold game UIs\n",
     "all_game_uis = set()\n",
     "team_game_id_dict = {team:set() for team in team_name_id_dict.keys()}\n",
     "\n",
+    "# Create counter and stop to rest point\n",
     "counter = 0\n",
     "stop_to_rest_point = np.random.randint(25,70)\n",
     "\n",
@@ -161,17 +218,17 @@
     "    \n",
     "    soup = BeautifulSoup(response.content)\n",
     "    table = soup.findAll(\"tr\")\n",
-    "\n",
+    "    # Iterate through rows\n",
     "    for row in table:\n",
     "\n",
     "        search = row.find('a',href = True)\n",
-    "        \n",
+    "        # A None object is returned if nothing is found\n",
     "        if not search:\n",
     "            continue\n",
     "            \n",
     "        game_ui = str(search).split('>')[0].replace('<a href=\"/cbb/boxscores/',\"\").replace('.html\"',\"\")\n",
     "\n",
-    "        # Games that were forfeitted end with '2023', so we want to remove those\n",
+    "        # Games that were forfeited end with '2023', so we want to remove those\n",
     "        if game_ui.endswith('2023'):\n",
     "            continue\n",
     "\n",
@@ -187,18 +244,31 @@
     "    time.sleep(np.random.randint(2,7))\n",
     "\n",
     "# Save the dict as a pickle file\n",
-    "with open('pickle_files/sports_reference_cbb_teams_and_game_uis.pickle','wb') as f:\n",
+    "with open(f'pickle_files/sports_reference_cbb_teams_and_game_uis_{SEASON}.pickle','wb') as f:\n",
     "    pickle.dump(team_game_id_dict,f)\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 17,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-17T03:39:44.261021700Z",
+     "start_time": "2023-10-17T03:39:38.461998300Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 6222/6222 [00:00<00:00, 2070201.45it/s]\n"
+     ]
+    }
+   ],
    "source": [
-    "with open('pickle_files/game_ids_with_boxscores.pickle','rb') as f:\n",
+    "with open('pickle_files/game_ids_with_boxscores_2023.pickle','rb') as f:\n",
     "        game_ui_boxscore_dict = pickle.load(f)\n",
     "\n",
     "counter = 0\n",
@@ -238,15 +308,15 @@
     "    if counter < save_point:\n",
     "\n",
     "        time.sleep(np.random.randint(3,5))\n",
-    "        # Pickle it ever so often just in case something happens\n",
-    "        with open('pickle_files/game_ids_with_boxscores.pickle','wb') as f:\n",
+    "        # Pickle it every so often just in case something happens\n",
+    "        with open('pickle_files/game_ids_with_boxscores_2023.pickle','wb') as f:\n",
     "            pickle.dump(game_ui_boxscore_dict,f)\n",
     "        continue\n",
     "\n",
     "    time.sleep(np.random.randint(3,5))\n",
     "\n",
     "# Pickle it\n",
-    "with open('pickle_files/game_ids_with_boxscores.pickle','wb') as f:\n",
+    "with open('pickle_files/game_ids_with_boxscores_2023.pickle','wb') as f:\n",
     "    pickle.dump(game_ui_boxscore_dict,f)"
    ]
   }
