Approaching more dynamic method

--- a/sports_reference_get_data.ipynb
+++ b/sports_reference_get_data.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-17T02:35:45.674178200Z",
-     "start_time": "2023-10-17T02:35:45.654989200Z"
+     "end_time": "2023-10-21T11:02:54.834661100Z",
+     "start_time": "2023-10-21T11:02:50.231975600Z"
     }
    },
    "outputs": [],
@@ -18,47 +18,8 @@
     "from tqdm import tqdm\n",
     "import time\n",
     "import pickle\n",
-    "\n",
-    "SEASON = 2023\n",
-    "\n",
-    "master_column_names = ['date',\n",
-    "                    'opp_name',\n",
-    "                    'wl',\n",
-    "                    'score',\n",
-    "                    'opp_score',\n",
-    "                    'fg',\n",
-    "                    'fga',\n",
-    "                    'fgpct',\n",
-    "                    '3p',\n",
-    "                    '3pa',\n",
-    "                    '3ppct',\n",
-    "                    'ft',\n",
-    "                    'fta',\n",
-    "                    'ftpct',\n",
-    "                    'orb',\n",
-    "                    'trb',\n",
-    "                    'ast',\n",
-    "                    'stl',\n",
-    "                    'blk',\n",
-    "                    'tov',\n",
-    "                    'pf',\n",
-    "                    'opp_fg',\n",
-    "                    'opp_fga',\n",
-    "                    'opp_fgpct',\n",
-    "                    'opp_3p',\n",
-    "                    'opp_3pa',\n",
-    "                    'opp_3ppct',\n",
-    "                    'opp_ft',\n",
-    "                    'opp_fta',\n",
-    "                    'opp_ftpct',\n",
-    "                    'opp_orb',\n",
-    "                    'opp_trb',\n",
-    "                    'opp_ast',\n",
-    "                    'opp_stl',\n",
-    "                    'opp_blk',\n",
-    "                    'opp_tov',\n",
-    "                    'opp_pf',\n",
-    "                    'team_name']\n",
+    "from modules.constants import MASTER_COLUMN_NAMES\n",
+    "SEASON = 2022\n",
     "\n",
     "url_prefix = 'https://www.sports-reference.com'"
    ]
@@ -154,7 +115,7 @@
     "    temp_df.columns = [col2 if (col1.startswith('Unnamed') or col1 == \"School\") else f\"opp_{col2}\" for col1,col2 in temp_df.columns]\n",
     "    temp_df = temp_df.iloc[:,~temp_df.columns.str.startswith('Unnamed')].drop('G',axis = 1).dropna().query(\"Date != 'Date'\")\n",
     "    temp_df['team_name'] = team_name\n",
-    "    temp_df.columns = master_column_names\n",
+    "    temp_df.columns = MASTER_COLUMN_NAMES\n",
     "    # Appending the cleaned dataframe back to the master data frame\n",
     "    master_df = pd.concat([master_df,temp_df])\n",
     "\n",
@@ -228,8 +189,8 @@
     "            \n",
     "        game_ui = str(search).split('>')[0].replace('<a href=\"/cbb/boxscores/',\"\").replace('.html\"',\"\")\n",
     "\n",
-    "        # Games that were forfeited end with '2023', so we want to remove those\n",
-    "        if game_ui.endswith('2023'):\n",
+    "        # Games that were forfeited end with the following season, so we want to remove those\n",
+    "        if game_ui.endswith(str(SEASON +1)):\n",
     "            continue\n",
     "\n",
     "        all_game_uis.add(game_ui)\n",
@@ -268,8 +229,11 @@
     }
    ],
    "source": [
-    "with open('pickle_files/game_ids_with_boxscores_2023.pickle','rb') as f:\n",
-    "        game_ui_boxscore_dict = pickle.load(f)\n",
+    "try:\n",
+    "    with open(f'pickle_files/game_ids_with_boxscores_{SEASON}.pickle','rb') as f:\n",
+    "            game_ui_boxscore_dict = pickle.load(f)\n",
+    "except FileNotFoundError:\n",
+    "    game_ui_boxscore_dict = {key:{} for key in set(game_id for v for v in team_game_id_dict.values())}\n",
     "\n",
     "counter = 0\n",
     "save_point = 100\n",
@@ -309,14 +273,14 @@
     "\n",
     "        time.sleep(np.random.randint(3,5))\n",
     "        # Pickle it every so often just in case something happens\n",
-    "        with open('pickle_files/game_ids_with_boxscores_2023.pickle','wb') as f:\n",
+    "        with open(f'pickle_files/game_ids_with_boxscores_{SEASON}.pickle','wb') as f:\n",
     "            pickle.dump(game_ui_boxscore_dict,f)\n",
     "        continue\n",
     "\n",
     "    time.sleep(np.random.randint(3,5))\n",
     "\n",
     "# Pickle it\n",
-    "with open('pickle_files/game_ids_with_boxscores_2023.pickle','wb') as f:\n",
+    "with open(f'pickle_files/game_ids_with_boxscores_{SEASON}.pickle','wb') as f:\n",
     "    pickle.dump(game_ui_boxscore_dict,f)"
    ]
   }
