Added daily update script and logging module

--- a/sports_reference_get_data.ipynb
+++ b/sports_reference_get_data.ipynb
@@ -2,13 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-10-21T11:02:54.834661100Z",
-     "start_time": "2023-10-21T11:02:50.231975600Z"
-    }
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from bs4 import BeautifulSoup\n",
@@ -19,7 +14,7 @@
     "import time\n",
     "import pickle\n",
     "from modules.constants import MASTER_COLUMN_NAMES\n",
-    "SEASON = 2022\n",
+    "SEASON = 2024\n",
     "\n",
     "url_prefix = 'https://www.sports-reference.com'"
    ]
@@ -35,22 +30,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-10-17T02:35:47.176344200Z",
-     "start_time": "2023-10-17T02:35:45.665095100Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/cbb/schools/purdue/men/2023\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Instantiate an empty dictionary\n",
     "team_name_id_dict = {}\n",
@@ -80,22 +62,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-10-17T03:10:25.452085500Z",
-     "start_time": "2023-10-17T02:35:47.179109700Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 363/363 [34:37<00:00,  5.72s/it] \n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Instantiate empty data frame\n",
     "master_df = pd.DataFrame()\n",
@@ -110,7 +79,16 @@
     "for team_name,url_suffix in tqdm(team_name_id_dict.items()):\n",
     "\n",
     "    full_url = f\"{url_prefix}{url_suffix}-gamelogs.html\"\n",
-    "    temp_df = pd.read_html(full_url)[0]\n",
+    "    \n",
+    "    # If there are NO GAMES, move on\n",
+    "    try:\n",
+    "        temp_df = pd.read_html(full_url)[0]\n",
+    "    except ValueError as e:\n",
+    "        msg = str(e)\n",
+    "        if msg == \"No tables found\":\n",
+    "            continue\n",
+    "        raise\n",
+    "    \n",
     "    # Surface-level data cleaning\n",
     "    temp_df.columns = [col2 if (col1.startswith('Unnamed') or col1 == \"School\") else f\"opp_{col2}\" for col1,col2 in temp_df.columns]\n",
     "    temp_df = temp_df.iloc[:,~temp_df.columns.str.startswith('Unnamed')].drop('G',axis = 1).dropna().query(\"Date != 'Date'\")\n",
@@ -144,22 +122,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-10-17T03:39:38.459660100Z",
-     "start_time": "2023-10-17T03:10:25.013181100Z"
-    }
+    "is_executing": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 363/363 [29:13<00:00,  4.83s/it] \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Instantiate an empty set to hold game UIs\n",
     "all_game_uis = set()\n",
@@ -212,22 +179,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-10-17T03:39:44.261021700Z",
-     "start_time": "2023-10-17T03:39:38.461998300Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 6222/6222 [00:00<00:00, 2070201.45it/s]\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "try:\n",
     "    with open(f'pickle_files/game_ids_with_boxscores_{SEASON}.pickle','rb') as f:\n",
