Updated relative file path

--- a/data_cleaning_and_reconciliation/Reconciling_Team_Names.ipynb
+++ b/data_cleaning_and_reconciliation/Reconciling_Team_Names.ipynb
@@ -11,7 +11,7 @@
    "source": [
     "import pandas as pd\n",
     "from modules import constants\n",
-    "df = pd.read_parquet('parquet_files/box_scores_sports_reference_2024.gzip')\n",
+    "df = pd.read_parquet('../parquet_files/box_scores_sports_reference_2024.gzip')\n",
     "df"
    ]
   },
